2011-05-22  Eric Botcazou  <ebotcazou@adacore.com>

	* config.gcc (sparc-*-elf*): Add sparc/t-crtin.
	(sparc-*-rtems*): Likewise.
	(sparc64-*-elf*): Likewise.
	(sparc64-*-rtems*): Likewise.
	(sparc*-*-solaris2*): Likewise.  Remove crti.o crtn.o extra parts.
	* config/sparc/t-crtin: New file.
	* config/sparc/t-sol2 (crti.o): Delete rule.
	(crtn.o): Likewise.
	* config/sparc/t-linux64 (EXTRA_MULTILIB_PARTS): Delete.
	* config/sparc/t-sol2-64 (EXTRA_MULTILIB_PARTS): Likewise.
	* config/sparc/sp64-elf.h (STARTFILE_SPEC): Tidy and add crti.o.
	(ENDFILE_SPEC): Add crtn.o.

2011-05-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/49104
	* config/i386/cpuid.h (bit_MMXEXT): New define.

2011-05-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/49029
	* expmed.c (extract_fixed_bit_field): Test whether target can be used
	only after deciding which mode to use.

2011-05-21  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.md (setjmp): Handle PIC mode and use the hard
	frame pointer.

2011-05-21  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (eligible_for_return_delay): Do not return
	false if there are call-saved registers here...
	(sparc_can_use_return_insn_p): ...but here instead.
	(save_or_restore_regs): Fix thinko.
	(sparc_expand_prologue): Use current_function_is_leaf.
	(sparc_frame_pointer_required): Likewise.

2011-05-20  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/49086
	* gimple-fold.c (and_comparisons_1, or_comparisons_1): Return NULL
	for PHI args that are SSA_NAME_IS_DEFAULT_DEF.

2011-05-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49079
	* tree-dfa.c (get_ref_base_and_extent): Handle view-converting
	MEM_REFs correctly for the trailing array access detection.
	Special case constants the same way as decls for overall size
	constraining.

2011-05-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/49073
	* gimple-fold.c (and_comparisons_1, or_comparisons_1): Return